    (francois at tekwire dot net)
  . Added object type annotation. (brzuchal)
  . Fixed bug #74815 (crash with a combination of INI entries at startup).
    (Anatol)

- OpenSSL:
  . Fixed bug #74798 (pkcs7_en/decrypt does not work if \x0a is used in content).
    (Anatol)

- SPL:
  . Fixed bug #73471 (PHP freezes with AppendIterator). (jhdxr)

- Standard:
  . Add support for extension name as argument to dl().
    (francois at tekwire dot net)

- zlib:
  . Fixed bug #73944 (dictionary option of inflate_init() does not work).
    (wapmorgan)
  . Expose inflate_get_status() and inflate_get_read_len() functions.
    (Matthew Trescott)

22 Jun 2017, PHP 7.2.0alpha2

- Core:
  . Change PHP_OS_FAMILY value from "OSX" to "Darwin". (sb, kalle)

- GD:
  . Fixed bug #74744 (gd.h: stdarg.h include missing for va_list use in
    gdErrorMethod). (rainer dot jung at kippdata dot de, cmb)

- OCI8:
  . Add TAF callback (PR #2459). (KoenigsKind)
  . Fixed bug #74625 (Integer overflow in oci_bind_array_by_name). (Ingmar Runge)

- OpenSSL:
  . Fixed bug #74720 (pkcs7_en/decrypt does not work if \x1a is used in
    content). (Anatol)
  . Use TLS_ANY for default ssl:// and tls:// negotiation. (kelunik)
  . Fix leak in openssl_spki_new(). (jelle at vdwaa dot nl)
  . Added openssl_pkcs7_read() and pk7 parameter to openssl_pkcs7_verify().
    (jelle at vdwaa dot nl)

- PDO_OCI:
  . Fixed Bug #74537 (Align --with-pdo-oci configure option with --with-oci8 syntax).
    (Tianfang Yang)

- Standard:
  . Compatibility with libargon2 versions 20161029 and 20160821.
    (charlesportwoodii at erianna dot com)
  . Fixed Bug #74737 (mysqli_get_client_info reflection info).
    (mhagstrand at gmail dot com)

- Streams:
  . Default ssl/single_dh_use and ssl/honor_cipher_order to true. (kelunik)

- SQLite3:
  . Update to Sqlite 3.19.3. (cmb)
  . Implement writing to blobs. (bohwaz at github dot com)

08 Jun 2017, PHP 7.2.0alpha1

- Core: